[workspace]
members = [
    ".",
    "crates/neoutl-object-api",
    "crates/objects/*",
    "crates/neoutl-media-api",
    "crates/media/*",
]
resolver = "2"

[workspace.dependencies]
neoutl-object-api = { path = "crates/neoutl-object-api" }
neoutl-media-api = { path = "crates/neoutl-media-api" }

neoutl-media-ffmpeg-decoder = { path = "crates/media/ffmpeg-decoder" }
neoutl-media-gpuvideo-decoder = { path = "crates/media/gpuvideo-decoder" }
neoutl-media-symphonia-decoder = { path = "crates/media/symphonia-decoder" }
neoutl-media-image-decoder = { path = "crates/media/image-decoder" }

[package]
name = "NeoUtl"
version = "0.0.0"
edition = "2024"

[dependencies]
neoutl-object-api.workspace = true
neoutl-media-api.workspace = true
neoutl-media-ffmpeg-decoder.workspace = true
neoutl-media-gpuvideo-decoder.workspace = true
neoutl-media-symphonia-decoder.workspace = true
neoutl-media-image-decoder.workspace = true
libloading = "0.9"
slint = { version = "1.17", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg-wgpu",
    "unstable-wgpu-29",
    "compat-1-2",
] }
wgpu = "29"
wgpu_text = "29"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync"] }
bytemuck = { version = "1.25", features = ["derive"] }
shipyard = "0.11"
lucide-slint = "1.23"
toml = "1.1.2"

[build-dependencies]
lucide-slint = "1.23.0"
slint-build = "1.17"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
