[workspace]
members = [
    ".",
    "crates/neoutl-shared-abi",
    "crates/neoutl-object-api",
    "crates/neoutl-effect-api",
    "crates/neoutl-theme-api",
    "crates/objects/*",
    "crates/effects/*",
    "crates/themes/*",
    "crates/neoutl-media-api",
    "crates/media/gstreamer-decoder",
    "crates/media/symphonia-decoder",
    "crates/media/gpuvideo-decoder",
    "crates/media/image-decoder",
    # "crates/media/ffmpeg-decoder",
    "crates/xtask",
]
resolver = "2"

[workspace.dependencies]
neoutl-shared-abi = { path = "crates/neoutl-shared-abi" }
neoutl-object-api = { path = "crates/neoutl-object-api" }
neoutl-effect-api = { path = "crates/neoutl-effect-api" }
neoutl-theme-api = { path = "crates/neoutl-theme-api" }
neoutl-media-api = { path = "crates/neoutl-media-api" }
toml = "0.9"
serde_json = "1.0"

[package]
name = "NeoUtl"
version = "0.0.0"
edition = "2024"

[dependencies]
neoutl-shared-abi.workspace = true
neoutl-object-api.workspace = true
neoutl-effect-api.workspace = true
neoutl-theme-api.workspace = true
neoutl-media-api.workspace = true
toml.workspace = true
serde_json.workspace = true
libloading = "0.9"
neoutl-media-gpuvideo-decoder = { path = "crates/media/gpuvideo-decoder" }
neoutl-media-gstreamer-decoder = { path = "crates/media/gstreamer-decoder" }
slint = { version = "1.17", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg-wgpu",
    "unstable-wgpu-29",
    "compat-1-2",
] }
wgpu = "29"
wgpu_text = "29"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync"] }
bytemuck = { version = "1.25", features = ["derive"] }
shipyard = "0.11"
lucide-slint = "1.24"
rust-yaml = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rfd = "0.17"

[build-dependencies]
lucide-slint = "1.24"
slint-build = "1.17"

[target.'cfg(not(target_os = "macos"))'.dependencies]
gpu-video = { version = "0.4", features = ["wgpu"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
#strip = true
strip = false
debug = true
